# obs-ssp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
cmake/macos/: compilerconfig.cmake  xcode.cmake
data/locale/: de-DE.ini  en-US.ini  ru-RU.ini  zh-CN.ini
lib/obs-browser/include/: browser-panel.hpp
src/: camera-status-manager.cpp  camera-status-manager.h  obs-ssp-source.cpp  obs-ssp.cpp  ssp-client-iso.cpp  ssp-client-iso.h  ssp-controller.cpp  ssp-controller.h  ssp-dock.cpp  ssp-dock.h  ssp-mdns.cpp  ssp-toolbar.cpp  ssp-toolbar.h
src/controller/: cameracontroller.cpp  cameracontroller.h
src/util/: pipe-posix.c  pipe-windows.c  pipe.c
ssp_connector/: CMakeLists.txt  main.cpp  main.h
